# dashboard

./: app.py  dashboard_app.py  pyproject.toml  requirements.txt  run.py  test_dashboard.py
templates/: index.html
